--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,21 @@
-<h2> {{ hero.name | uppercase }} Details</h2>
-<div> <span>id: </span> {{ hero.id }} </div>
-<div> <span>name: </span> {{ hero.name }} </div>
+<h1>My Heroes</h1>
 
-<div>
-    <label for="name">Hero name:</label>
-    <input id="name" [(ngModel)]="hero.name" placeholder="name" type="text" />
-</div>
+<mat-table [dataSource]="heroes">
+    <!-- ID -->
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.id }} </mat-cell>
+    </ng-container>
+
+    <!-- Name -->
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.name }} </mat-cell>
+    </ng-container>
+
+    <!-- Header and Row Declarations -->
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"
+    [routerLink]="['/heroes', row.id]"
+    ></mat-row>
+</mat-table>
