--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
-<mat-toolbar color="dark">
-    <span>{{ title }}</span>
-    <span fxFlex></span>
-    <button mat-icon-button aria-label="Dashboard" matTooltip="Dashboard" routerLink="/dashboard">
-        <mat-icon>dashboard</mat-icon>
-    </button>
-    <button mat-icon-button aria-label="Heroes List" matTooltip="Heroes" routerLink="/heroes">
-        <mat-icon>sports_martial_arts</mat-icon>
-    </button>
-</mat-toolbar>
+<app-toolbar [title]="title" [menuItems]="menuItems"></app-toolbar>
 
 <div class="content" fxLayoutGap="12px">
     <router-outlet></router-outlet>
