--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,16 @@
 <h1>Dashboard</h1>
 
-<div fxLayout="row" fxLayoutGap="12px" fxLayoutAlign="space-between" fxLayout.xs="column">
+<div fxLayout="row"
+    fxLayoutGap="12px"
+    fxLayoutAlign="space-between"
+    fxLayout.xs="column"
+    >
 
-    <mat-card class="pointer" *ngFor="let hero of heroes" routerLink="/heroes/{{hero.id}}">
+    <mat-card
+        class="pointer"
+        *ngFor="let hero of heroes"
+        [routerLink]="['/heroes', hero.id]"
+        >
         <mat-card-title> {{ hero.name }} </mat-card-title>
     </mat-card>
 
