--- a/src/app/heroes/components/hero-detail/hero-detail.component.html
+++ b/src/app/heroes/components/hero-detail/hero-detail.component.html
@@ -15,17 +15,18 @@
         </mat-card-content>
 
         <mat-card-actions>
+            <button color="primary" [disabled]="!isFormValid()" mat-raised-button (click)="save()">Save</button>
             <button mat-raised-button (click)="goBack()">Go Back</button>
         </mat-card-actions>
     </mat-card>
 
     <mat-card class="example-card">
         <mat-card-title-group>
-          <mat-card-title>{{ hero.name }}</mat-card-title>
-          <img mat-card-xl-image [src]="hero.imgURL" />
+            <mat-card-title>{{ hero.name }}</mat-card-title>
+            <img mat-card-xl-image [src]="hero.imgURL" />
         </mat-card-title-group>
         <mat-card-content>
-          {{ hero.description }}
+            {{ hero.description }}
         </mat-card-content>
     </mat-card>
 
