--- a/src/app/heroes/components/heroes/heroes.component.html
+++ b/src/app/heroes/components/heroes/heroes.component.html
@@ -1,5 +1,9 @@
 <h1>My Heroes</h1>
 
+<button class="add-button" color="danger" mat-fab routerLink="new">
+  <mat-icon>add</mat-icon>
+</button>
+
 <mat-table [dataSource]="heroes" class="mat-elevation-z8">
     <!-- ID -->
     <ng-container matColumnDef="id">
