--- a/src/app/heroes/components/heroes/heroes.component.scss
+++ b/src/app/heroes/components/heroes/heroes.component.scss
@@ -1,3 +1,11 @@
+.add-button {
+    position: absolute;
+    right: 20px;
+    top: 80px;
+    color: white;
+    background-color: red;
+}
+
 .mat-row:hover {
     cursor: pointer;
     background-color: red;
