--- a/src/app/heroes/components/hero-detail/hero-detail.component.html
+++ b/src/app/heroes/components/hero-detail/hero-detail.component.html
@@ -1,32 +1,37 @@
 <h1> {{ isEditing ? "Update" : "Create" }} Hero</h1>
 
-<mat-card>
-    <mat-card-content fxLayout="column">
-        <mat-form-field *ngIf="isEditing">
-            <mat-label>ID</mat-label>
-            <input matInput disabled [value]="hero.id">
-        </mat-form-field>
+<form [formGroup]="form" novalidate>
+    <mat-card>
+        <mat-card-content fxLayout="column">
+            <mat-form-field *ngIf="isEditing">
+                <mat-label>ID</mat-label>
+                <input matInput formControlName="id">
+            </mat-form-field>
 
-        <mat-form-field>
-            <mat-label>Hero name</mat-label>
-            <input id="name" matInput [(ngModel)]="hero.name" placeholder="Name" type="text" />
-        </mat-form-field>
-    </mat-card-content>
+            <mat-form-field>
+                <mat-label>Hero name</mat-label>
+                <input id="name" formControlName="name" matInput placeholder="Name" type="text">
+                <mat-error *ngIf="form.controls['name'].hasError('required')">
+                    Name is required.
+                </mat-error>
+                <mat-error *ngIf="form.controls['name'].hasError('minlength')">
+                    Name should contain at least 3 caracters.
+                </mat-error>
+            </mat-form-field>
+        </mat-card-content>
 
-    <mat-card-actions>
-        <button color="primary" [disabled]="!isFormValid()" mat-raised-button *ngIf="!isEditing"
-            (click)="create()">Create
-        </button>
+        <mat-card-actions>
+            <button color="primary" mat-raised-button *ngIf="!isEditing" (click)="create()">Create
+            </button>
 
-        <button color="primary" [disabled]="!isFormValid()" mat-raised-button *ngIf="isEditing"
-            (click)="update()">Update
-        </button>
+            <button color="primary" mat-raised-button *ngIf="isEditing" (click)="update()">Update
+            </button>
 
-        <button mat-raised-button (click)="goBack()">Go Back</button>
-    </mat-card-actions>
-</mat-card>
+            <button mat-raised-button (click)="goBack()">Go Back</button>
+        </mat-card-actions>
+    </mat-card>
 
-<!--<mat-card class="example-card">
+    <!--<mat-card class="example-card">
     <mat-card-title-group>
         <mat-card-title>{{ hero.name }}</mat-card-title>
         <img mat-card-xl-image [src]="hero.imgURL" />
@@ -35,3 +40,4 @@
         {{ hero.description }}
     </mat-card-content>
 </mat-card> -->
+</form>
