--- a/src/app/heroes/components/heroes/heroes.component.scss
+++ b/src/app/heroes/components/heroes/heroes.component.scss
@@ -10,3 +10,13 @@
     cursor: pointer;
     background-color: red;
 }
+
+.mat-column-id {
+    max-width: 60px;
+}
+
+.mat-column-actions {
+    border-left: 1px solid currentColor;
+    max-width: 60px;
+    padding-left: 16px;
+}
