Add Guard With Login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-toolbar [title]="title" [menuItems]="menuItems"></app-toolbar>
+<app-toolbar [title]="title" [menuItems]="menuItems" [isLoggedIn]="isLoggedIn$ | async" (logout)="onLogout()"></app-toolbar>
 
 <div class="content" fxLayoutGap="12px">
     <app-loading></app-loading>
     <router-outlet></router-outlet>
-    <app-messages></app-messages>
+    <app-messages *ngIf="isLoggedIn$ | async"></app-messages>
 </div>
