--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -3,14 +3,27 @@
 
     <span fxFlex></span>
 
-    <button
-        mat-icon-button
-        aria-label="menuItem.toolTipText"
-        [matTooltip]="menuItem.toolTipText"
-        *ngFor="let menuItem of menuItems"
-        [routerLink]="[menuItem.routerLink]"
-    >
-        <mat-icon> {{ menuItem.icon }} </mat-icon>
-    </button>
+    <ng-container *ngIf="isLoggedIn">
+
+        <button mat-icon-button aria-label="menuItem.toolTipText" [matTooltip]="menuItem.toolTipText"
+            *ngFor="let menuItem of menuItems" [routerLink]="[menuItem.routerLink]">
+            <mat-icon> {{ menuItem.icon }} </mat-icon>
+        </button>
+
+    </ng-container>
+
+    <a mat-button matTooltip="Login into app" *ngIf="!isLoggedIn" routerLink="/login">
+        Login
+    </a>
+
+    <div *ngIf="isLoggedIn">
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>account_circle</mat-icon>
+        </button>
+    </div>
+
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="onLogout()">Logout</button>
+    </mat-menu>
 
 </mat-toolbar>
